2009-07-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: Zaheer Abbas Merali

	* flumotion/common/python.py:
	  Add 'set' name because sets.Set was deprecated in 2.6.
	* flumotion/admin/gtk/configurationassistant.py:
	* flumotion/common/fxml.py:
	* flumotion/common/messages.py:
	* flumotion/common/registry.py:
	* flumotion/component/combiners/switch/switch.py:
	  Adapt.

2009-07-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: Zaheer Abbas Merali

	* flumotion/admin/admin.py:
	* flumotion/common/bundle.py:
	* flumotion/common/python.py:
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/bouncers/htpasswdcrypt.py:
	* flumotion/component/bouncers/plug.py:
	* flumotion/component/bouncers/saltsha256.py:
	* flumotion/component/misc/httpserver/cachedprovider.py:
	* flumotion/monitor/nagios/stream.py:
	* flumotion/test/test_common_bundle.py:
	* flumotion/twisted/credentials.py:
	  Fix Python 2.6 DeprecationWarnings for sha and md5
	* common/validate-registry.py:
	  Add a comment with a line to uncomment when warnings are hard to
	  find.

2009-07-17  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* common/pep8.py:
	Do not consider comments which are one a line by itself
	as blank lines and work around bug in Python < 2.6 tokenize.py.
	Fixes #1306.

2009-07-14  Jan Urbanski  <jurbanski@flumotion.com>

	* doc/random/http-ondemand-rendering.rst:
	Fix typos, add some RST formatting.

2009-07-14  Jan Urbanski  <jurbanski@flumotion.com>

	* doc/random/http-ondemand-rendering.rst (added):
	Add documentation explaining how the http-ondemand component renders
	requests.

2009-07-14  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/errors.py:
	Extend the NoProjectError exception to include additional debug
	message.

	* flumotion/project/project.py:
	Include an additional debug message when raising NoProjectError.
	Fixes #955.
