@@ -1,3 +1,11 @@
+2009-07-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/admin/gtk/configurationassistant.py:
+	* flumotion/common/fxml.py:
+	* flumotion/component/combiners/switch/switch.py:
+	Fix problems in previous commit that was due to my bad
+	review on Friday.
+
 2009-07-17  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	reviewed by: Zaheer Abbas Merali
